Updated styles and initial information

--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
 		<title>reveal.js</title>
 
 		<link rel="stylesheet" href="css/reveal.css">
-		<link rel="stylesheet" href="css/theme/black.css">
+		<link rel="stylesheet" href="css/theme/white.css">
+		<link rel="stylesheet" href="css/custom.css">
 
 		<!-- Theme used for syntax highlighting of code -->
 		<link rel="stylesheet" href="lib/css/zenburn.css">
@@ -24,8 +25,192 @@
 	<body>
 		<div class="reveal">
 			<div class="slides">
-				<section>Slide 1</section>
-				<section>Slide 2</section>
+        <!-- Slide --> 
+        <section>
+          <h1>Android fundamentals</h1>
+        </section>
+
+        <!-- Slide --> 
+        <section>
+          <h2>Mitko &#x26; Teo</h2>
+        </section>
+
+        <!-- Slide --> 
+        <section>
+          <h2>Schedule</h2>
+
+          <table class="schedule-table">
+            <thead>
+              <tr>
+                <th>Lecture</th>
+                <th>Date</th>
+                <th>Tutor</th>
+                <th>Time</th>
+                <th>Hall</th>
+              </tr>
+            </thead>
+
+            <tbody>
+              <!-- Row -->
+              <tr>
+                <td>Course Introduction</td> 
+                <td>14 Feb</td>
+                <td>Dimitar Danailov</td>
+                <td>18:30</td>
+                <td>Experience</td>
+              </tr> 
+
+              <!-- Row -->
+              <tr>
+                <td>Intents and Lifecycle</td>
+                <td>14 Feb</td>
+                <td>Dimitar Danailov</td>
+                <td>18:30</td>
+                <td>Experience</td>
+              </tr>
+
+              <!-- Row -->
+              <tr>
+                <td>Views and Layouts</td>
+                <td>21 Feb</td>
+                <td>Teodor Kostadinov</td>
+                <td>18:30</td>
+                <td>Experience</td>
+              </tr>
+
+            </tbody>
+          </table>
+        </section>
+
+        <!-- Slide --> 
+        <section>
+          <h2>Schedule</h2>
+
+          <table class="schedule-table">
+            <thead>
+              <tr>
+                <th>Lecture</th>
+                <th>Date</th>
+                <th>Tutor</th>
+                <th>Time</th>
+                <th>Hall</th>
+              </tr>
+            </thead>
+
+            <tbody>
+
+              <!-- Row -->
+              <tr>
+                <td>Connect to Internet</td>
+                <td>28 Feb</td>
+                <td>Dimitar Danailov</td>
+                <td>18:30</td>
+                <td>Experience</td>
+              </tr>
+
+              <!-- Row -->
+              <tr>
+                <td>Recycle view</td>
+                <td>7 Mar</td>
+                <td>Teodor Kostadinov</td>
+                <td>18:30</td>
+                <td>Experience</td>
+              </tr>
+
+              <!-- Row -->
+              <tr>
+                <td>Preferencies and SQLite</td>
+                <td>14 Mar</td>
+                <td>Dimitar Danailov</td>
+                <td>18:30</td>
+                <td>Experience</td>
+              </tr>
+
+            </tbody>
+          </table>
+        </section>
+
+        <!-- Slide --> 
+        <section>
+          <h2>Schedule</h2>
+
+          <table class="schedule-table">
+            <thead>
+              <tr>
+                <th>Lecture</th>
+                <th>Date</th>
+                <th>Tutor</th>
+                <th>Time</th>
+                <th>Hall</th>
+              </tr>
+            </thead>
+
+            <tbody>
+
+              <!-- Row -->
+              <tr>
+                <td>Background Tasks</td>
+                <td>21 Mar</td>
+                <td>Teodor Kostadinov</td>
+                <td>18:30</td>
+                <td>Experience</td>
+              </tr>
+
+              <!-- Row -->
+              <tr>
+                <td>Material Design and Fragments</td>
+                <td>28 Mar</td>
+                <td>Teodor Kostadinov</td>
+                <td>18:30</td>
+                <td>Experience</td>
+              </tr>
+
+              <!-- Row -->
+              <tr>
+                <td>Android Design Patterns</td>
+                <td>4 Arp</td>
+                <td>Dimitar Danailov</td>
+                <td>18:30</td>
+                <td>Experience</td>
+              </tr>
+            </tbody>
+          </table>
+        </section>
+
+        <!-- Slide --> 
+        <section>
+          <h2>Udacity and Google Nanodgree</h2>
+        </section>
+
+        <!-- Slide --> 
+        <section>
+          <h2>Slack</h2>
+        </section>
+
+        <!-- Slide --> 
+        <section>
+          <h2>Git and Github</h2>
+        </section>
+
+        <!-- Slide --> 
+        <section>
+          <h2>Java and Kotlin</h2>
+        </section>
+
+        <!-- Slide --> 
+        <section>
+          <h2>Android Studio and JVM </h2>
+        </section>
+
+        <!-- Slide --> 
+        <section>
+          <h2>
+            Getting started with Android development by 
+            <a target="_blank" 
+              title="Getting started with Android development" 
+              href="http://www.vogella.com/tutorials/Android/article.html">Vogella</a>
+          </h2>
+        </section>
 			</div>
 		</div>
 
