Updated styles and title

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
-		<title>reveal.js</title>
+		<title>#AndroidSoftUni - Course Introduction</title>
 
 		<link rel="stylesheet" href="css/reveal.css">
 		<link rel="stylesheet" href="css/theme/white.css">
@@ -25,6 +25,11 @@
 	<body>
 		<div class="reveal">
 			<div class="slides">
+        <!-- Slide --> 
+        <section data-background-color="#000">
+          <h1>#AndroidSoftUni</h1>
+        </section>
+
         <!-- Slide --> 
         <section>
           <h1>Android fundamentals</h1>
