Slides are ready

--- a/index.html
+++ b/index.html
@@ -37,7 +37,8 @@
 
         <!-- Slide --> 
         <section>
-          <h2>Mitko &#x26; Teo</h2>
+          <h2><a href="https://stackoverflow.com/users/609707/d-danailov" 
+              target="_blank" title="stackoverflow">Mitko</a>  &#x26; Teo</h2>
         </section>
 
         <!-- Slide --> 
@@ -182,9 +183,28 @@
           </table>
         </section>
 
+        <!-- Slide -->
+        <section>
+          <h2>Exam</h2>
+        </section>
+
+        <!-- Slide -->
+        <section>
+          <h2>License</h2>
+          <p>
+            This course (slides, examples, demos, videos, homework, etc) is licensed under the 
+            <a href="https://creativecommons.org/licenses/by-nc-sa/4.0/" title="Soft uni license" target="_blank">"Creative Commons Attribution-NonCommercial-ShareAlike 4.0 Internation"</a>
+            license
+          </p>
+        </section>
+
         <!-- Slide --> 
         <section>
-          <h2>Udacity and Google Nanodgree</h2>
+          <h2>
+            Udacity and Google 
+            <a target="_blank" title="Udacity Nanodgree" 
+              href="https://eu.udacity.com/course/android-developer-nanodegree-by-google--nd801">Nanodgree</a>
+          </h2>
         </section>
 
         <!-- Slide --> 
@@ -216,6 +236,117 @@
               href="http://www.vogella.com/tutorials/Android/article.html">Vogella</a>
           </h2>
         </section>
+
+        <!-- Slide --> 
+        <section>
+          <h2>
+            <a href="https://developer.android.com/guide/platform/index.html" 
+              target="_blank" title="Platform Architecture">Platform Architecture</a>
+          </h2>
+        </section>
+
+        <!-- Slide -->
+        <section>
+          <h2>
+            <a href="https://www.android.com/history/"
+              target="_blank" title="History">Android versions</a>
+          </h2>
+        </section>
+
+        <!-- Slide -->
+        <section>
+          <h2>App Manifest</h2>
+        </section>
+
+        <!-- Slide -->
+        <section data-background-color="#000">
+					<blockquote cite="https://developer.android.com/guide/topics/manifest/manifest-intro.html">
+            &ldquo;Every application must have an AndroidManifest.xml file (with precisely that name) in its root directory. The manifest file provides essential information about your app to the Android system, which the system must have before it can run any of the app's code.&rdquo;
+					</blockquote>
+        </section>
+
+        <!-- Slide -->
+        <section data-background-color="#000">
+          <pre><code data-trim data-noescape>
+&lt;?xml version=&quot;1.0&quot; encoding=&quot;UTF-8&quot;?&gt;
+&lt;manifest&gt;
+   &lt;uses-permission /&gt;
+   &lt;permission /&gt;
+   &lt;permission-tree /&gt;
+   &lt;permission-group /&gt;
+   &lt;instrumentation /&gt;
+   &lt;uses-sdk /&gt;
+   &lt;uses-configuration /&gt;
+   &lt;uses-feature /&gt;
+   &lt;supports-screens /&gt;
+   &lt;compatible-screens /&gt;
+   &lt;supports-gl-texture /&gt;
+   &lt;application&gt;
+      &lt;activity&gt;
+         &lt;intent-filter&gt;
+            &lt;action /&gt;
+            &lt;category /&gt;
+            &lt;data /&gt;
+         &lt;/intent-filter&gt;
+         &lt;meta-data /&gt;
+      &lt;/activity&gt;
+      &lt;activity-alias&gt;
+         &lt;intent-filter&gt;. . .&lt;/intent-filter&gt;
+         &lt;meta-data /&gt;
+      &lt;/activity-alias&gt;
+      &lt;service&gt;
+         &lt;intent-filter&gt;. . .&lt;/intent-filter&gt;
+         &lt;meta-data /&gt;
+      &lt;/service&gt;
+      &lt;receiver&gt;
+         &lt;intent-filter&gt;. . .&lt;/intent-filter&gt;
+         &lt;meta-data /&gt;
+      &lt;/receiver&gt;
+      &lt;provider&gt;
+         &lt;grant-uri-permission /&gt;
+         &lt;meta-data /&gt;
+         &lt;path-permission /&gt;
+      &lt;/provider&gt;
+      &lt;uses-library /&gt;
+   &lt;/application&gt;
+&lt;/manifest&gt;
+          </code></pre>
+        </section>
+
+        <!-- Slide -->
+        <section>
+          <h2>
+            <a href="https://developer.android.com/studio/run/device.html#setting-up" 
+              target="_blank" title="Run Apps on a Hardware Device">Run Apps on a Hardware Device</a>
+          </h2>
+        </section>
+
+        <!-- Slide -->
+        <section>
+          <h2>
+            <a href="https://developer.android.com/studio/run/emulator.html" 
+              target="_blank" title="Run Apps on the Android Emulator">Run Apps on the Android Emulator</a>
+          </h2>
+        </section>
+
+        <!-- Slide -->
+        <section>
+          <h2>
+            <a href="https://developer.android.com/studio/index.html" 
+              target="_blank" title="Android Studio">Android Studio</a>
+          </h2>
+        </section>
+
+        <!-- Slide -->
+        <section>
+          <h2>Android Studio Overview</h2>
+        </section>
+
+        <!-- Slide -->
+        <section>
+          <h2>Project Structure</h2>
+        </section>
+
 			</div>
 		</div>
 
