--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
 	</head>
 	<body>
 		<div class="reveal">
+      <div class="logo"></div>
 			<div class="slides">
         <!-- Slide --> 
         <section data-background-color="#000">
